# ASVL-MediaAgent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh  status.sh  stop.sh  项目架构.md
MediaCrawlerPro-Downloader/DownloadServer/logic/: content_detail_logic.py
MediaCrawlerPro-Downloader/DownloadServer/models/: content_detail.py
asvl/: __init__.py  main.py
asvl/api/: __init__.py  deps.py
asvl/api/router/: __init__.py  result.py  task.py  video.py
asvl/core/: __init__.py  strategy_selector.py
asvl/core/asr/: __init__.py  aliyun_asr.py  audio_extractor.py  base.py  siliconflow_asr.py  streaming_extractor.py
asvl/core/clipper/: __init__.py  base.py  ffmpeg_clipper.py  merger.py
asvl/core/fusion/: __init__.py  aligner.py  attraction_analyzer.py  base.py  (+1 more)
asvl/db/: __init__.py  session.py
asvl/models/: __init__.py  enums.py  schemas.py
asvl/storage/: __init__.py  local_storage.py  oss_client.py
asvl/utils/: __init__.py  retry.py  time_utils.py  video_utils.py
asvl/workers/: __init__.py  celery_app.py
configs/: __init__.py  logging.py  settings.py
configs/prompts/: __init__.py  attraction_prompt.py  fusion_prompt.py  segment_prompt.py  vision_detect_prompt.py
docs/: implementation_check.md  硅基流动ASR_API使用指南.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
scripts/: start_worker.sh
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
(+43 files in other folders)
