[project]
name = "asvl"
version = "0.1.0"
description = "多模态视频理解引擎 - ASR + LLM + VL"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Tayen", email = "tayen@example.com"}]

dependencies = [
    # Web框架
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",

    # 任务队列
    "celery>=5.4.0",
    "redis>=5.0.0",

    # 数据库
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # AI/ML - OpenAPI兼容客户端
    "openai>=1.12.0",
    "tiktoken>=0.6.0",
    "httpx>=0.27.0",

    # 视频处理
    "ffmpeg-python>=0.2.0",

    # 阿里云
    "oss2>=2.18.0",
    "websockets>=12.0",

    # 工具
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["asvl", "configs"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]